--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -32,30 +32,40 @@
 {% endblock %}
 
   <div id="vidContainer">
+    <video id='live'
+         class='video-js vjs-default-skin'
+         controls
+         preload>
+          <source
+             src='/hls/index.m3u8'
+             type='application/x-mpegURL' />
+        </video>
   </div>
+  
   <script>
     window.onload = function () {
       vc = document.getElementByID("vidContainer");
-      vc.innerHTML = "waiting..."
+      vc.innerHTML = "waiting...";
       if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
         vc = document.getElementByID("vidContainer");
         vc.innerHTML = "<iframe src='/hls/index.m3u8'></iframe>"
         
       } else {
         vc.innerHTML = "  <video id='live'
-         class='video-js vjs-default-skin embed-responsive-item'
-         height='250'
-         width='300'
+         class='video-js vjs-default-skin'
          controls
          preload>
           <source
-             src='http://aha.local/hls/index.m3u8'
+             src='/hls/index.m3u8'
              type='application/x-mpegURL' />
         </video>"
         videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
             // initialize the player
         var player = videojs("live");
       }
+      videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
+            // initialize the player
+        var player = videojs("live");
       
 
     }
